# KeyPresenter

./: .gitignore  CMakeLists.txt  README.md  config.cmake.in
include/keypresenter/: key.h  keyboard.h  keypresenter.h  poll.h  pollresult.h
installer/: CMakeLists.txt
src/: CMakeLists.txt  appstate.h  macro.h  main.c  polltaskresult.h  x11.c  x11.h
tools/: package.sh
